[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/space_background.png" type="Texture" id=1]
[ext_resource path="res://learning_net/UISound/UISound.tscn" type="PackedScene" id=2]
[ext_resource path="res://learning_net/fade_in/FadeIn.tscn" type="PackedScene" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://learning_net/main.gd" type="Script" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform sampler2D tex;

void fragment(){
	float s =UV.x*(0.7-sin(TIME)*0.02);
	float d =UV.y*(0.8-cos(TIME)*0.09);
	vec4 e = texture(tex,vec2(s,d));
	COLOR = e;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/tex = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = -102.5
margin_right = 151.0
margin_bottom = 102.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="traning_net" type="Button" parent="VBoxContainer"]
margin_right = 302.0
margin_bottom = 100.0
size_flags_vertical = 3
text = "traning_net"
icon = ExtResource( 4 )

[node name="test_nueron_net" type="Button" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 302.0
margin_bottom = 205.0
size_flags_vertical = 3
text = "test_nueron_net"
icon = ExtResource( 4 )

[node name="exit" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -302.0
margin_top = -70.0
size_flags_vertical = 3
text = "EXIT"
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeIn" parent="." instance=ExtResource( 3 )]
visible = false

[node name="UISound" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
