[gd_scene load_steps=2 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_right = 134.0
margin_bottom = 61.0
text = "CLICK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 1018.0
margin_bottom = 598.0
popup_exclusive = true
window_title = "Open a File"
mode = 0
access = 1
current_dir = "user://"
current_path = "user://"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="confirmed" from="FileDialog" to="." method="_on_FileDialog_confirmed"]
